src/ref/raylib3.0.h

RLAPI int GetTouchPointsCount(void);                          // Get touch points count