src/ref/RayLib.pas


  // Load file data as byte array (read)
  LoadFileData: function(const fileName: PUTF8Char; bytesRead: PCardinal): PByte; cdecl;
  // Unload file data allocated by LoadFileData()
  UnloadFileData: procedure(Data: PByte); cdecl;
  // Save data to file from byte array (write)
  SaveFileData: procedure(const fileName: PUTF8Char; data: Pointer; bytesToWrite: Cardinal); cdecl;
  // Load text data from file (read), returns a '\0' terminated string
  LoadFileText: function(const fileName: PUTF8Char): PUTF8Char; cdecl;
  // Unload file text data allocated by LoadFileText()
  UnloadFileText: procedure(Text: PUTF8Char); cdecl;
  // Save text data to file (write), string must be '\0' terminated
  SaveFileText: procedure(const fileName: PUTF8Char; text: PUTF8Char); cdecl;
  // Check if file exists
  FileExists: function(const fileName: PUTF8Char): Boolean; cdecl;
  // Check if a directory path exists
  DirectoryExists: function(const dirPath: PUTF8Char): Boolean; cdecl;
  // Check file extension
  IsFileExtension: function(const fileName: PUTF8Char; const ext: PUTF8Char): Boolean; cdecl;
  // Get pointer to extension for a filename string (includes dot: '.png')
  GetFileExtension: function(const fileName: PUTF8Char): PUTF8Char; cdecl;
  // Get pointer to filename for a path string
  GetFileName: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
  // Get filename string without extension (uses static string)
  GetFileNameWithoutExt: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
  // Get full path for a given fileName with path (uses static string)
  GetDirectoryPath: function(const filePath: PUTF8Char): PUTF8Char; cdecl;
  // Get previous directory path for a given path (uses static string)
  GetPrevDirectoryPath: function(const dirPath: PUTF8Char): PUTF8Char; cdecl;
  // Get current working directory (uses static string)
  GetWorkingDirectory: function: PUTF8Char; cdecl;
  // Get filenames in a directory path (memory should be freed)
  GetDirectoryFiles: function(const dirPath: PUTF8Char; count: PInteger): PPUTF8Char; cdecl;
  // Clear directory files paths buffers (free memory)
  ClearDirectoryFiles: procedure; cdecl;
  // Change working directory, returns true if success
  ChangeDirectory: function(const dir: PUTF8Char): Boolean; cdecl;
  // Check if a file has been dropped into window
  IsFileDropped: function: Boolean; cdecl;
  // Get dropped files names (memory should be freed)
  GetDroppedFiles: function(count: PInteger): PPUTF8Char; cdecl;
  // Clear dropped files paths buffer (free memory)
  ClearDroppedFiles: procedure; cdecl;
  // Get file modification time (last write time)
  GetFileModTime: function(const fileName: PUTF8Char): Integer; cdecl;

  // Compression/Encoding functionality
  // Compress data (DEFLATE algorythm)
  CompressData: function(data: PByte; dataLength: Integer; compDataLength: PInteger): PByte; cdecl;
  // Decompress data (DEFLATE algorythm)
  DecompressData: function(compData: PByte; compDataLength: Integer; dataLength: PInteger): PByte; cdecl;
  // Encode data to Base64 string
  EncodeDataBase64: function(Data: PByte; dataLength: Integer; OutputLength: PInteger): PByte; cdecl;  //TODO zaher, check it by example please
  // Decode Base64 string data
  DecodeDataBase64: function(Data: PByte; outputLength: PInteger): PByte;  //TODO zaher, check it by example please

  { Persistent storage management }

  // Save integer value to storage file (to defined position)
  SaveStorageValue: function(position: Cardinal; value: Integer): Boolean; cdecl;
  // Load integer value from storage file (from defined position)
  LoadStorageValue: function(position: Cardinal): Integer; cdecl;

  // Open URL with default system browser (if available)
  OpenURL: procedure(const url: PUTF8Char); cdecl;

//------------------------------------------------------------------------------------
// Input Handling Functions (Module: core)
//------------------------------------------------------------------------------------

  { Input-related functions: keyboard }

  // Check if a key has been pressed once
  IsKeyPressed: function(key: Integer): Boolean; cdecl;
  // Check if a key is being pressed
  IsKeyDown: function(key: Integer): Boolean; cdecl;
  // Check if a key has been released once
  IsKeyReleased: function(key: Integer): Boolean; cdecl;

  { Input-related functions: gamepads }

  // Detect if a key is NOT being pressed
  IsKeyUp: function(key: Integer): Boolean; cdecl;
  // Set a custom key to exit program (default is ESC)
  SetExitKey: procedure(key: Integer); cdecl;
  // Get key pressed, call it multiple times for chars queued, returns 0 when the queue is empty
  GetKeyPressed: function: Integer; cdecl;
  // Get char pressed (unicode), call it multiple times for chars queued, returns 0 when the queue is empty
  GetCharPressed: function: Integer; cdecl;

  // Input-related functions: gamepads

  // Check if a gamepad is available
  IsGamepadAvailable: function(gamepad: Integer): Boolean; cdecl;
  // Get gamepad internal name id
  GetGamepadName: function(gamepad: Integer): PUTF8Char; cdecl;
  // Check if a gamepad button has been pressed once
  IsGamepadButtonPressed: function(gamepad: Integer; button: Integer): Boolean; cdecl;
   // Check if a gamepad button is being pressed
  IsGamepadButtonDown: function(gamepad: Integer; button: Integer): Boolean; cdecl;
  // Check if a gamepad button has been released once
  IsGamepadButtonReleased: function(gamepad: Integer; button: Integer): Boolean; cdecl;
  // Check if a gamepad button is NOT being pressed
  IsGamepadButtonUp: function(gamepad: Integer; button: Integer): Boolean; cdecl;
  // Get the last gamepad button pressed
  GetGamepadButtonPressed: function: Integer; cdecl;
  // Return gamepad axis count for a gamepad
  GetGamepadAxisCount: function(gamepad: Integer): Integer; cdecl;
  // Return axis movement value for a gamepad axis
  GetGamepadAxisMovement: function(gamepad: Integer; axis: Integer): Single; cdecl;
  // Set internal gamepad mappings (SDL_GameControllerDB)
  SetGamepadMappings: function(mappings: PUTF8Char): Integer; cdecl;

  { Input-related functions: mouse }

  // Check if a mouse button has been pressed once
  IsMouseButtonPressed: function(button: TMouseButton): Boolean; cdecl;
  // Check if a mouse button is being pressed
  IsMouseButtonDown: function(button: TMouseButton): Boolean; cdecl;
  // Check if a mouse button has been released once
  IsMouseButtonReleased: function(button: TMouseButton): Boolean; cdecl;
  // Check if a mouse button is NOT being pressed
  IsMouseButtonUp: function(button: TMouseButton): Boolean; cdecl;
  // Get mouse position X
  GetMouseX: function: Integer; cdecl;
  // Get mouse position Y
  GetMouseY: function: Integer; cdecl;
  {$ifdef FPC}
  // Get mouse position XY
  GetMousePosition: function: TVector2; cdecl;
  // Get mouse delta between frames
  GetMouseDelta: function: TVector2; cdecl;
  {$else} //Stupid Delphi
  // Get mouse position XY
  GetMousePosition: function: Int64; cdecl;
  // Get mouse delta between frames
  GetMouseDelta: function: Int64; cdecl;
  {$endif}
  // Set mouse position XY
  SetMousePosition: procedure(x: Integer; y: Integer); cdecl;
  // Set mouse offset
  SetMouseOffset: procedure(offsetX: Integer; offsetY: Integer); cdecl;
  // Set mouse scaling
  SetMouseScale: procedure(scaleX: Single; scaleY: Single); cdecl;
  // Get mouse wheel movement Y
  GetMouseWheelMove: function: Single; cdecl;
  // Set mouse cursor
  SetMouseCursor: procedure(Cursor: Integer); cdecl;

  { Input-related functions: touch }

  // Get touch position X for touch point 0 (relative to screen size)
  GetTouchX: function: Integer; cdecl;
  // Get touch position Y for touch point 0 (relative to screen size)
  GetTouchY: function: Integer; cdecl;
  // Get touch position XY for a touch point index (relative to screen size)
  GetTouchPosition: function(index: Integer): TVector2; cdecl;
  // Get touch point identifier for given index
  GetTouchPointId: function(index: Integer): Integer; cdecl;
  // Get number of touch points
  GetTouchPointCount: function: Integer; cdecl;

//------------------------------------------------------------------------------------
// Gestures and Touch Handling Functions (Module: rgestures)
//------------------------------------------------------------------------------------

  // Enable a set of gestures using flags
  SetGesturesEnabled: procedure(Flags: Cardinal); cdecl;
  // Check if a gesture have been detected
  IsGestureDetected: function(gesture: Integer): Boolean; cdecl;
  // Get latest detected gesture
  GetGestureDetected: function: Integer; cdecl;
  // Get touch points count
  GetTouchPointsCount: function: Integer; cdecl;
  // Get gesture hold time in milliseconds
  GetGestureHoldDuration: function: Single; cdecl;
  // Get gesture drag vector
  GetGestureDragVector: function: TVector2; cdecl;
  // Get gesture drag angle
  GetGestureDragAngle: function: Single; cdecl;
  // Get gesture pinch delta
  GetGesturePinchVector: function: TVector2; cdecl;
  // Get gesture pinch angle
  GetGesturePinchAngle: function: Single; cdecl;

//------------------------------------------------------------------------------------
// Camera System Functions (Module: rcamera)
//------------------------------------------------------------------------------------

  // Set camera mode (multiple camera modes available)
  SetCameraMode: procedure(camera: TCamera; mode: Integer); cdecl;
  // Update camera position for selected mode
  UpdateCamera: procedure(camera: PCamera); cdecl;

  // Set camera pan key to combine with mouse movement (free camera)
  SetCameraPanControl: procedure(KeyPan: Integer); cdecl;
  // Set camera alt key to combine with mouse movement (free camera)
  SetCameraAltControl: procedure(Keylt: Integer); cdecl;
  // Set camera smooth zoom key to combine with mouse (free camera)
  SetCameraSmoothZoomControl: procedure(keySmoothZoom: Integer); cdecl;
  // Set camera move controls (1st person and 3rd person cameras)
  SetCameraMoveControls: procedure(KeyFront: Integer; KeyBack: Integer; KeyRight: Integer; KeyLeft: Integer; KeyUp: Integer; KeyDown: Integer); cdecl;

//------------------------------------------------------------------------------------
// Basic Shapes Drawing Functions (Module: shapes)
//------------------------------------------------------------------------------------
  // Set texture and rectangle to be used on shapes drawing
  // NOTE: It can be useful when using basic shapes and one single font,
  // defining a font char white rectangle would allow drawing everything in a single draw call

  // Set texture and rectangle to be used on shapes drawing
  SetShapesTexture: procedure(texture: TTexture2D; Source: TRectangle); cdecl;

  { Basic shapes drawing functions }
